--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:text="@string/greetings" />
 
         <TextView
+            android:id="@+id/myTextView"
             style="@style/Greetings"
             android:text="@string/user_name"
             android:textColor="@color/blue" />
