--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Base.Theme.Sapp" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorControlActivated">@color/blue</item>
+        <item name="colorControlActivated">@color/magenta</item>
         <item name="android:textColor">@color/white</item>
         <item name="textAllCaps">false</item>
         <item name="android:textSize">@dimen/text_size_medium</item>
