Permissions and logic added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         <TextView
             style="@style/Greetings"
             android:text="@string/user_name"
-            android:textColor="@color/blue" />
+            android:textColor="@color/olive" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/results"
-                android:textColor="@color/blue"
+                android:textColor="@color/olive"
                 android:textStyle="bold" />
         </LinearLayout>
 
